SearchView: Style SearchWindowFilterNotification *

--- a/source/Views/SearchView.xaml
+++ b/source/Views/SearchView.xaml
@@ -137,7 +137,8 @@
     </Style>
 
     <ControlTemplate x:Key="SearchWindowFilterNotification" TargetType="ContentControl">
-        <Border Background="{DynamicResource NormalBrushDark}"
+        <Border Background="{DynamicResource TextBoxIsSelectedBackgroundBrush}"
+                CornerRadius="{DynamicResource ControlCornerRadius}"
                 HorizontalAlignment="Stretch">
             <TextBlock FontSize="{DynamicResource FontSizeLarge}" VerticalAlignment="Center"
                        Style="{DynamicResource BaseTextBlockStyle}"
