--- a/source/Constants.xaml
+++ b/source/Constants.xaml
@@ -36,7 +36,17 @@
     <Thickness x:Key="PopupBorderThickness">0</Thickness>
     <Thickness x:Key="ControlBorderThickness">0</Thickness>
     <sys:Double x:Key="EllipseBorderThickness">0</sys:Double>
-    <CornerRadius x:Key="ControlCornerRadius">5</CornerRadius>
+    <sys:Double x:Key="ControlCornerRadiusValue">5</sys:Double>
+    <CornerRadius x:Key="ControlCornerRadius"
+                  TopLeft="{StaticResource ControlCornerRadiusValue}" 
+                  TopRight="{StaticResource ControlCornerRadiusValue}"
+                  BottomRight="{StaticResource ControlCornerRadiusValue}"
+                  BottomLeft="{StaticResource ControlCornerRadiusValue}"/>
+    <CornerRadius x:Key="SliderFillCornerRadius"
+                  TopLeft="{StaticResource ControlCornerRadiusValue}" 
+                  TopRight="0"
+                  BottomRight="0"
+                  BottomLeft="{StaticResource ControlCornerRadiusValue}"/>
     <CornerRadius x:Key="ControlCornerRadiusSmall">3</CornerRadius>
     <CornerRadius x:Key="GridViewCoverCornerRadius">5</CornerRadius>
     <CornerRadius x:Key="GridViewCoverGridBackgroundDisabledCornerRadius">5,5,0,0</CornerRadius>
@@ -396,7 +406,7 @@
     </RadialGradientBrush>
     
     <!--region end-->
-
+    
     <SolidColorBrush x:Key="OpaqueHighlightBrush" Color="{DynamicResource GlyphSubColor}" Opacity="0.5"/>
     <SolidColorBrush x:Key="OpaqueHighlightBrushBright" Color="{DynamicResource GlyphColor}" Opacity="0.5"/>
     <SolidColorBrush x:Key="OpaqueGrayHighlightBrush" Color="#4c919191" />
