--- a/source/Constants.xaml
+++ b/source/Constants.xaml
@@ -23,6 +23,7 @@
     <sys:Boolean x:Key="GridViewEnablePlayingGlowBorder">False</sys:Boolean>
     <sys:Boolean x:Key="GridViewPlaceDescriptionAtBottom">False</sys:Boolean>
     <sys:Double x:Key="GridViewCoverLibraryBannerOpacity">1.0</sys:Double>
+    <Visibility x:Key="GridViewDetailsIconsVisibility">Visible</Visibility>
     <!--region end-->
     
     <sys:Double x:Key="FontSizeSmall">12</sys:Double>
