--- a/source/Constants.xaml
+++ b/source/Constants.xaml
@@ -252,10 +252,7 @@
 
     <SolidColorBrush x:Key="WarningBrush" Color="#ff6b6b" />
 
-    <!--<LinearGradientBrush x:Key="ExpanderBackgroundBrush" StartPoint="-0.1,0.5" EndPoint="1.2,1" >
-        <GradientStop Color="#FF2C3A67" Offset="0"/>
-        <GradientStop Color="#002C3A67" Offset="0.7"/>
-    </LinearGradientBrush>-->
+    <SolidColorBrush x:Key="WindowBarButtonForegroundBrush" Color="#778991" />
 
     <LinearGradientBrush x:Key="WindowBackgourndBrush1" StartPoint="0.5,-0.2" EndPoint="0.4,1" >
         <GradientStop Color="#282D35" Offset="0"/>
