--- a/source/DerivedStyles/WindowBarButton.xaml
+++ b/source/DerivedStyles/WindowBarButton.xaml
@@ -4,7 +4,7 @@
     <Style x:Key="WindowBarButton" TargetType="Button">
         <Setter Property="OverridesDefaultStyle" Value="True" />
         <Setter Property="BorderThickness" Value="0" />
-        <Setter Property="Foreground" Value="{DynamicResource TextBrush}" />
+        <Setter Property="Foreground" Value="{DynamicResource WindowBarButtonForegroundBrush}" />
         <Setter Property="Margin" Value="5,0,5,0" />
         <Setter Property="Padding" Value="3" />
         <Setter Property="Focusable" Value="False" />
@@ -23,10 +23,10 @@
         </Setter>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Foreground" Value="{DynamicResource GlyphBrush}" />
+                <Setter Property="Foreground" Value="White" />
             </Trigger>
             <Trigger Property="IsFocused" Value="True">
-                <Setter Property="Foreground" Value="{DynamicResource GlyphBrush}" />
+                <Setter Property="Foreground" Value="White" />
             </Trigger>
         </Style.Triggers>
     </Style>
