DetailsViewGroupStyle: Trim expander text when there's not enough width available

--- a/source/DerivedStyles/DetailsViewGroupStyle.xaml
+++ b/source/DerivedStyles/DetailsViewGroupStyle.xaml
@@ -16,8 +16,23 @@
                                 <DockPanel.ContextMenu>
                                     <GameGroupMenu />
                                 </DockPanel.ContextMenu>
+                                <Grid DockPanel.Dock="Right" Margin="5,0,10,0">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Border Grid.Column="0" CornerRadius="4" Background="{DynamicResource GroupCountBackgroundBrush}"  Width="Auto">
+                                        <TextBlock Text="{Binding Items.Count, Mode=OneWay, StringFormat={}{0}}"
+                                                   Foreground="#A5A7A9"
+                                                   VerticalAlignment="Center" HorizontalAlignment="Center"
+                                                   Style="{DynamicResource BaseTextBlockStyle}"
+                                                   TextAlignment="Center" FontSize="{DynamicResource FontSizeSmall}"
+                                                   Visibility="{Settings ShowGroupCount}"
+                                                   Margin="7,0,7,0"/>
+                                    </Border>
+                                </Grid>
                                 <TextBlock DockPanel.Dock="Left"
                                            VerticalAlignment="Center" HorizontalAlignment="Left"
+                                           TextWrapping="NoWrap" TextTrimming="CharacterEllipsis"
                                            TextAlignment="Center" Margin="0,0,5,0">
                                     <TextBlock.Style>
                                         <Style TargetType="TextBlock" BasedOn="{StaticResource BaseTextBlockStyle}">
@@ -33,20 +48,6 @@
                                         </Style>
                                     </TextBlock.Style>
                                 </TextBlock>
-                                <Grid DockPanel.Dock="Left" Margin="5,0,10,0">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="Auto"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Border Grid.Column="0" CornerRadius="4" Background="{DynamicResource GroupCountBackgroundBrush}"  Width="Auto">
-                                        <TextBlock Text="{Binding Items.Count, Mode=OneWay, StringFormat={}{0}}"
-                                               Foreground="#A5A7A9"
-                                               VerticalAlignment="Center" HorizontalAlignment="Center"
-                                               Style="{DynamicResource BaseTextBlockStyle}"
-                                               TextAlignment="Center" FontSize="{DynamicResource FontSizeSmall}"
-                                               Visibility="{Settings ShowGroupCount}"
-                                               Margin="7,0,7,0"/>
-                                    </Border>
-                                </Grid>
                             </DockPanel>
                         </ExpanderEx.Header>
                         <ItemsPresenter />
